# AIConversation

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md
python-backend/: pyproject.toml  requirements-dev.txt  requirements.txt
python-backend/src/server/: app_state.py  config.py  error_handlers.py  main.py
python-backend/src/server/api/: dependencies.py  router.py
python-backend/src/server/api/admin/: models.py
python-backend/src/server/api/agent/: handlers.py
python-backend/src/server/api/audio/: speech.py  transcriptions.py  utils.py  vad.py
python-backend/src/server/api/chat/: completions.py  threads.py
python-backend/src/server/api/onboarding/: handlers.py
python-backend/src/server/api/transcriptions/: handlers.py
python-backend/src/server/api/tts_history/: handlers.py
python-backend/src/server/api/voice/: ivws_protocol.py  observations.py  profile.py  realtime.py  ring_buffer.py  (+2 more)
python-backend/src/server/models/: schemas.py
python-backend/src/server/services/: model_downloader.py  seed_models.py
python-backend/src/server/stores/: __init__.py  base.py  chat_store.py  model_store.py  onboarding_store.py  saved_voice_store.py  speech_history_store.py  transcription_store.py  voice_observation_store.py  voice_store.py
python-backend/tests/: conftest.py  test_admin.py  test_audio.py  test_chat.py  test_inference_asr.py  test_inference_asr_enhanced.py  test_inference_llm.py  test_inference_tts.py  test_inference_tts_enhanced.py  test_inference_utils.py  test_inference_vad.py  test_transcriptions.py  test_voice.py  test_voice_realtime.py
(+155 files in other folders)
